--- a/bin/build
+++ b/bin/build
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 env
-BUILD_VERSION=${BUILD_NUMBER}
+BUILD_VERSION=${BUILD_ID}
 GIT_VERSION=${GIT_HASH}
 FULL_TAG=${BUILD_VERSION}-${GIT_VERSION}
 echo "building ${FULL_TAG}.tgz"
