--- a/bin/build
+++ b/bin/build
@@ -2,6 +2,6 @@
 
 env
 BUILD_VERSION=${BUILD_ID}
-GIT_VERSION=${GIT_HASH}
+GIT_VERSION=${GIT_COMMIT}
 FULL_TAG=${BUILD_VERSION}-${GIT_VERSION}
 echo "building ${FULL_TAG}.tgz"
